# 2023-ai-team-project

./: .env.sample  .flake8  .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  mypy.ini  pyproject.toml  setup.cfg  utils.py  yolov4-tiny.ipynb  yolov4.ipynb
images/: carrot(10).txt  carrot(1374).txt  carrot(1375).txt  carrot(1376).txt  carrot(1377).txt  carrot(1378).txt  carrot(1379).txt  carrot(1380).txt  carrot(1381).txt  carrot(1382).txt  carrot(1383).txt  carrot(1384).txt  carrot(2).txt  carrot(3).txt  carrot(4).txt  carrot(5).txt  carrot(6).txt  carrot(7).txt  carrot(8).txt  carrot(9).txt  egg(1).txt  egg(10).txt  egg(1693).txt  egg(1694).txt  egg(1695).txt  egg(1696).txt  egg(1697).txt  egg(1698).txt  egg(1699).txt  egg(1700).txt  egg(1701).txt  egg(1702).txt  egg(1703).txt  egg(2).txt  egg(3).txt  egg(4).txt  egg(5).txt  egg(6).txt  egg(7).txt  egg(8).txt  (+22 more)
spider/: items.py  middlewares.py  models.py  pipelines.py  settings.py
spider/spiders/: rakuten_recipe_spider.py
spider/utils/: constants.py  db_adapter.py  logger.py  slack_notify.py  spider_utils.py
tests/data/: table_operations.py
tests/docker/: docker-compose.yaml
tests/train/: carrot(1).txt  egg(1).txt  tomato(1).txt
tests/val/: carrot (1109).txt  egg (1364).txt  tomato (1402).txt
yolov4/: train.txt  val.txt  yolov4_vegetable.cfg  yolov4_vegetable.data  yolov4_vegetable.names
yolov4-tiny/: yolov4_tiny_custom_vegetable.cfg  yolov4_tiny_vegetable.cfg  yolov4_tiny_vegetable.data
yolov4-tiny/backup/: train_log.txt
yolov4/backup/: train_log.txt
